--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,2 +1,8 @@
-//= require_tree ./vendor
-//= require_tree ./lib
+@import 'container'
+@import 'header'
+@import 'skin'
+@import 'footer'
+@import 'dropdown'
+@import 'noJS'
+@import 'font-awesome'
+
