add gallery for main page

--- a/source/stylesheets/lib/_fonts.css.sass
+++ b/source/stylesheets/lib/_fonts.css.sass
@@ -1,34 +1,34 @@
 @font-face
 	font-family: PTSans
-	src: url(fonts/pt-sans.ttf) format('true-type')
+	src: url(fonts/pt-sans.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-italic
-	src: url(fonts/pt-sans-italic.ttf) format('true-type')
+	src: url(fonts/pt-sans-italic.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-bold
-	src: url(fonts/pt-sans-bold.ttf) format('true-type')
+	src: url(fonts/pt-sans-bold.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-bold-italic
-	src: url(fonts/pt-sans-bold-italic.ttf) format('true-type')
+	src: url(fonts/pt-sans-bold-italic.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-caption
-	src: url(fonts/pt-sans-caption.ttf) format('true-type')
+	src: url(fonts/pt-sans-caption.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-caption-bold
-	src: url(fonts/pt-sans-caption-bold.ttf) format('true-type')
+	src: url(fonts/pt-sans-caption-bold.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-narrow
-	src: url(fonts/pt-sans-narrow.ttf) format('true-type')
+	src: url(fonts/pt-sans-narrow.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-narrow-bold
-	src: url(fonts/pt-sans-narrow-bold.ttf) format('true-type')
+	src: url(fonts/pt-sans-narrow-bold.ttf) format('truetype')
 
 
 
