add blog list for main page

--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -34,7 +34,10 @@
 			right: -39px
 			top: 0px
 			width: 45px
+			-o-transform: skewX(-12deg)
+			-moz-transform: skewX(-12deg)
 			-webkit-transform: skewX(-12deg)
+			transform: skewX(-12deg)
 
 		#bx-slider-custom-pager
 			margin: 20px 0 10px
@@ -86,7 +89,10 @@
 				right: -20px
 				top: 0px
 				width: 25px
+				-o-transform: skewX(-12deg)
+				-moz-transform: skewX(-12deg)
 				-webkit-transform: skewX(-12deg)
+				transform: skewX(-12deg)
 
 		.all
 			color: #fff
@@ -139,14 +145,21 @@
 					display: table
 					right: 5px
 					position: absolute
+					-o-transform: skewX(-12deg)
+					-moz-transform: skewX(-12deg)
 					-webkit-transform: skewX(-12deg)
+					transform: skewX(-12deg)
 					a
 						color: #fff
 						padding: 10px 20px
 						display: block
 						font-family: PTSans-bold
 						font-size: 15px
+						text-decoration: none
 						text-transform: uppercase
+						-o-transform: skewX(12deg)
+						-moz-transform: skewX(12deg)
 						-webkit-transform: skewX(12deg)
+						transform: skewX(12deg)
 						i
 							font-size: 18px
