--- a/source/stylesheets/_header.css.sass
+++ b/source/stylesheets/_header.css.sass
@@ -5,7 +5,7 @@
 
 	
 
-#header .topLinks .wrapper-dropdown-2 .topElement 
+#header .topLinks .wrapper-dropdown-top .topElement
 	border-bottom: 1px dashed #ed4d30
 	margin-left: 3px
 	
@@ -45,17 +45,17 @@
 	background: url('../img/headerFranMini.png') no-repeat
 	
 #header .topLinks .city
-	float:left
-		padding: 10px 15px
+	float: left
+	padding: 10px 15px
 	
 #header .topLinks .yourCity
-	float:left
-		padding: 10px 15px
-		padding-right: 0px
+	float: left
+	padding: 10px 15px
+	padding-right: 0px
 
 #header .topLinks .company, #header .topLinks .franch, #header .topLinks .blog, #header .topLinks .auto
-	float:right
-		padding: 10px 15px 10px 5px
+	float: right
+	padding: 10px 15px 10px 5px
 
 
 #header .topLogo
@@ -107,8 +107,7 @@
 	height: 50px
 
 .menu-element
-	display: inline-block
-	vertical-align: top
+	float: left
 	position: relative
 
 #header .mainMenu .topElement
