layout is in progress

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -47,7 +47,7 @@
 								Шиномонтаж
 					%li
 						%a{:href=>"#"}
-
+							%span.lIm
 							%span.liName
 								Мойка
 		.footerMenuElement
@@ -57,14 +57,17 @@
 				%ul.footerUl
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Гарантия
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Кредит
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Дисконтная программа
 		.footerMenuElement
@@ -74,22 +77,27 @@
 				%ul.footerUl
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								О компании
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Вакансии
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Корпоративным клиентам
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Благотворительность
 					%li
 						%a{:href=>"#"}
+							%span.lIm
 							%span.liName
 								Франшиза
 		.footerMenuElement
@@ -99,18 +107,22 @@
 				%ul.footerUl
 					%li
 						%a{:href=>"#"}
+							%span.lImVk
 							%span.liName
 								Мы Вконтакте
 					%li
 						%a{:href=>"#"}
+							%span.lImTwit
 							%span.liName
 								Мы в Twitter
 					%li
 						%a{:href=>"#"}
+							%span.lImFace
 							%span.liName
 								Мы в Facebook
 					%li
 						%a{:href=>"#"}
+							%span.lImYoutube
 							%span.liName
 								Мы на Youtube
 		.siteMap
