--- a/source/stylesheets/_container.css.sass
+++ b/source/stylesheets/_container.css.sass
@@ -13,9 +13,10 @@ a img, span img
 
 	/* Container start */
 #container
-	width: 960px
+	width: 1080px
 	margin: 0 auto
 	background-color: #fff
+	height: 100%
 
 
 #container .orangeFont, #container .orangeFont a,  #container .orangeFont p
