--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -4,6 +4,15 @@
 @import "lib/jquery.bxslider"
 @import "lib/main_gallery"
 @import "lib/blog"
+@import 'container'
+@import 'header'
+@import 'skin'
+@import 'footer'
+@import 'main_part'
+@import 'dropdown'
+@import 'noJS'
+@import 'font-awesome'
+
 
 body
 	font-family: PTSans
