--- a/source/stylesheets/_footer.css.sass
+++ b/source/stylesheets/_footer.css.sass
@@ -7,7 +7,7 @@
 #footer .carousel
 	position: absolute
 	width: 100%
-	bottom: 345px
+	bottom: 325px
 	z-index: 2
 	
 #footer .footerData 
@@ -89,14 +89,21 @@
 	
 #footer .footerData .footerMenuElement .footerUl 
 	list-style: none
+	li a
+		line-height: 10px
+		font-size: 12px
 	
 
 #footer .footerData .footerMenuElement .footerUl li .lIm 
-	top: 3px
+	top: 8px
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
 	background: url('../img/footerDot.png') no-repeat
+	position: absolute
+	left: 0
+	width: 20px
+	height: 20px
 	
 
 #footer .footerData .footerMenuElement .footerUl li  
@@ -105,15 +112,69 @@
 
 
 #footer .footerData .footerMenuElement  .footerMenuElementMiddle 
-	width: 180px
+	width: 200px
 	padding-top: 70px
 	margin: 0 auto
-	
-.lImY 
+
+
+.lImYoutube
+	left: 0
 	width: 20px
 	height: 20px
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
 	background: url('../img/footerMiniYoutube.png') no-repeat
-	
+
+.lImVk
+	left: 0
+	width: 20px
+	height: 20px
+	padding-left: 20px
+	padding-bottom: 3px
+	border: none
+	background: url('../img/footerMiniVK.png') no-repeat
+
+.lImTwit
+	left: 0
+	width: 20px
+	height: 20px
+	padding-left: 20px
+	padding-bottom: 3px
+	border: none
+	background: url('../img/footerMiniTwitter.png') no-repeat
+
+.lImFace
+	left: 0
+	width: 20px
+	height: 20px
+	padding-left: 20px
+	padding-bottom: 3px
+	border: none
+	background: url('../img/footerMiniFacebook.png') no-repeat
+
+
+#footer .footerMenuElement .footerMenuElementMiddle
+	h3
+		font-family: "PTSans"
+		font-size: 12px
+		text-transform: uppercase
+		margin: 0 0 0 25px
+	a
+		display: block
+		text-decoration: underline
+		color: #ffffff
+		padding: 5px 10px 5px 20px
+		-webkit-transition: all 0.3s ease-out
+		-moz-transition: all 0.3s ease-out
+		-ms-transition: all 0.3s ease-out
+		-o-transition: all 0.3s ease-out
+		transition: all 0.3s ease-out
+		position: relative
+	a:hover
+		color: #231f20 !important
+		text-decoration: none
+		.lIm
+			padding-bottom: 3px
+			border: none
+			background: url('../../img/headerMenuRight.png') no-repeat
