--- a/source/stylesheets/_main_part.css.sass
+++ b/source/stylesheets/_main_part.css.sass
@@ -1,4 +1,13 @@
-#mainPart .blogs 
+html, body
+	height: 100%
+#mainPart
+	min-height: 100%
+	margin-bottom: -500px
+#mainPart:after
+	content: ""
+	height: 500px
+	display: block
+#mainPart .blogs
 	width: 100%
 	height: 250px
 	
