--- a/source/stylesheets/_header.css.sass
+++ b/source/stylesheets/_header.css.sass
@@ -132,13 +132,18 @@
 	.info-block
 		display: inline-block
 		vertical-align: top
-		margin-top: 20px
+		margin: 20px 0 0 20px
 		span.code, span.phone
-			font-size: 37px
-		/*span.code
-			font-family
-		/*span.phone */
-
+			font-size: 30px
+			color: #ffffff
+		span.code
+			font-family: NeoSansPro-light
+		span.phone
+			font-family: NeoSansPro-bold
+		span.work-time
+			font-family: PTSans
+			color: #ffffff
+			float: left
 #header .topLogo .linkServiceBook
 	top: 40px
 	right: 300px
