--- a/source/stylesheets/lib/_fonts.css.sass
+++ b/source/stylesheets/lib/_fonts.css.sass
@@ -30,6 +30,14 @@
 	font-family: PTSans-narrow-bold
 	src: url(fonts/pt-sans-narrow-bold.ttf) format('truetype')
 
+@font-face
+	font-family: NeoSansPro-light
+	src: url(fonts/Neo_Sans_Pro_Light.ttf) format('truetype')
+
+@font-face
+	font-family: NeoSansPro-bold
+	src: url(fonts/Neo_Sans_Pro_Bold.ttf) format('truetype')
+
 
 
 
