hanged links on img

--- a/source/_blogs.html.haml
+++ b/source/_blogs.html.haml
@@ -9,7 +9,8 @@
 
 	.blogs-list
 		.blog-elem
-			%img{:src => 'images/blog/image_1.jpg'}
+			%a{:href => '#'}
+				%img{:src => 'images/blog/image_1.jpg'}
 			.date
 				31 июля 2013
 			%a{:href => '#'}
@@ -18,21 +19,24 @@
 				наш новый сайт
 
 		.blog-elem
-			%img{:src => 'images/blog/image_2.jpg'}
+			%a{:href => '#'}
+				%img{:src => 'images/blog/image_2.jpg'}
 			.date
 				26 мая 2013
 			%a{:href => '#'}
 				открыт premium филиал в&nbsp;караганде
 
 		.blog-elem
-			%img{:src => 'images/blog/image_3.jpg'}
+			%a{:href => '#'}
+				%img{:src => 'images/blog/image_3.jpg'}
 			.date
 				19 марта 2013
 			%a{:href => '#'}
 				шиномонтаж за 20 минут
 
 		.blog-elem
-			%img{:src => 'images/blog/image_4.jpg'}
+			%a{:href => '#'}
+				%img{:src => 'images/blog/image_4.jpg'}
 			.date
 				1 февраля 2013
 			%a{:href => '#'}
