--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -1,5 +1,6 @@
 .main-gallery
 	background-color: #f27d32
+	box-sizing: content-box
 	color: #fff
 	height: 367px
 	margin: 0 auto
@@ -13,6 +14,7 @@
 		width: 255px
 
 		.title
+			box-sizing: content-box
 			background-color: #ed4d30
 			border-bottom: 3px solid #fff
 			font-family: PTSans-bold
@@ -24,6 +26,7 @@
 			width: 150px
 
 		.title:after
+			box-sizing: content-box
 			background-color: #ed4d30
 			border-right: 3px solid #fff
 			border-bottom: 3px solid #fff
@@ -42,6 +45,7 @@
 		#bx-slider-custom-pager
 			margin: 20px 0 10px
 			a
+				box-sizing: content-box
 				text-transform: uppercase
 				background-color: #f06d32
 				border-bottom: 1px solid #ed4d30
@@ -62,6 +66,7 @@
 				padding-right: 20px
 
 			a.active:before
+				box-sizing: content-box
 				font-family: FontAwesome
 				font-size: 22px
 				padding-top: 18px
@@ -75,11 +80,13 @@
 				color: #fff
 
 			a.active:after
+				box-sizing: content-box
 				background-color: #ed4d30
 				height: 51px
 				z-index: 2
 
 			a:after
+				box-sizing: content-box
 				background-color: #f06d32
 				border-radius: 0 10px 10px 0
 				border-bottom: 1px solid #ed4d30
@@ -138,6 +145,7 @@
 					text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 20px #000, 0 0 35px #000
 
 				.more-link
+					box-sizing: content-box
 					background-color: #f27d32
 					border: 7px solid #fff
 					border-radius: 12px
@@ -150,6 +158,7 @@
 					-webkit-transform: skewX(-12deg)
 					transform: skewX(-12deg)
 					a
+						box-sizing: content-box
 						color: #fff
 						padding: 10px 20px
 						display: block
