left sidebar done

--- a/source/stylesheets/_container.css.sass
+++ b/source/stylesheets/_container.css.sass
@@ -1,6 +1,6 @@
 body 
 	font-family: 'PT Sans', sans-serif
-	background-color: #f7f8f8
+	background-color: #ffffff
 	color: #231f20
 	font-size: 14px
 	
