main gallery mozilla fix

--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -14,6 +14,8 @@
 		width: 255px
 
 		.title
+			-moz-box-sizing: content-box
+			-webkit-box-sizing: content-box
 			box-sizing: content-box
 			background-color: #ed4d30
 			border-bottom: 3px solid #fff
@@ -27,6 +29,8 @@
 
 		.title:after
 			box-sizing: content-box
+			-moz-box-sizing: content-box
+			-webkit-box-sizing: content-box
 			background-color: #ed4d30
 			border-right: 3px solid #fff
 			border-bottom: 3px solid #fff
@@ -46,6 +50,8 @@
 			margin: 20px 0 10px
 			a
 				box-sizing: content-box
+				-moz-box-sizing: content-box
+				-webkit-box-sizing: content-box
 				text-transform: uppercase
 				background-color: #f06d32
 				border-bottom: 1px solid #ed4d30
@@ -67,6 +73,8 @@
 
 			a.active:before
 				box-sizing: content-box
+				-moz-box-sizing: content-box
+				-webkit-box-sizing: content-box
 				font-family: FontAwesome
 				font-size: 22px
 				padding-top: 18px
@@ -87,6 +95,8 @@
 
 			a:after
 				box-sizing: content-box
+				-moz-box-sizing: content-box
+				-webkit-box-sizing: content-box
 				background-color: #f06d32
 				border-radius: 0 10px 10px 0
 				border-bottom: 1px solid #ed4d30
@@ -146,6 +156,8 @@
 
 				.more-link
 					box-sizing: content-box
+					-moz-box-sizing: content-box
+					-webkit-box-sizing: content-box
 					background-color: #f27d32
 					border: 7px solid #fff
 					border-radius: 12px
@@ -159,6 +171,8 @@
 					transform: skewX(-12deg)
 					a
 						box-sizing: content-box
+						-moz-box-sizing: content-box
+						-webkit-box-sizing: content-box
 						color: #fff
 						padding: 10px 20px
 						display: block
