add .h1-5 class in main

--- a/source/_main_gallery.html.haml
+++ b/source/_main_gallery.html.haml
@@ -96,6 +96,8 @@
 		$('#bx-main-slider').bxSlider({
 		controls: false,
 		pager: true,
-		pagerCustom: '#bx-slider-custom-pager'
+		pagerCustom: '#bx-slider-custom-pager',
+		auto: true,
+		pause: 7000
 		});
 	});
