--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -35,6 +35,7 @@
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/main.css'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.bxslider.js'}
+    %script{:type => 'text/javascript', :src => 'javascripts/jquery.customSelect.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/bootstrap.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/ready.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/modernizr.custom.79639.js'}
