--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -3,7 +3,10 @@
 @import "lib/fonts"
 @import "lib/jquery.bxslider"
 @import "lib/main_gallery"
-@import "lib/blog"
+@import 'lib/date'
+@import 'lib/button'
+@import 'lib/blog'
+@import 'lib/stations'
 @import 'container'
 @import 'header'
 @import 'skin'
@@ -11,7 +14,6 @@
 @import 'main_part'
 @import 'dropdown'
 @import 'noJS'
-@import 'font-awesome'
 
 
 body
@@ -20,6 +22,32 @@ body
 
 h1, h2, h3, h4, h5, h6
 	font-family: PTSans-bold
+	font-weight: normal
+
+h5
+	font-size: 15px
+
+.h1, .h2, .h3, .h4, .h5, .h6
+	font-family: PTSans-bold
+	font-weight: normal
+
+.h1
+	font-size: 20px
+
+.h2
+	font-size: 17px
+
+.h3
+	font-size: 15px
+
+.h4
+	font-size: 12px
+
+.h5
+	font-size: 11px
+
+.upper
+	text-transform: uppercase
 
 a
 	color: #ed4d30
