--- a/source/stylesheets/lib/_container.css.sass
+++ b/source/stylesheets/lib/_container.css.sass
@@ -1,6 +1,6 @@
 body 
 	font-family: 'PT Sans', sans-serif
-	background-color: #ffffff
+	background-color: #f7f8f8
 	color: #231f20
 	font-size: 14px
 	
@@ -12,12 +12,16 @@ a img, span img
 	
 
 	/* Container start */
-#container
+#inner-container
 	width: 1080px
 	margin: 0 auto
 	background-color: #fff
 	height: 100%
 
+#container
+	width: 1200px
+	margin: 0 auto
+	background-color: #ffffff
 
 #container .orangeFont, #container .orangeFont a,  #container .orangeFont p
 	color: #ed4d30
