--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -8,7 +8,18 @@
 #header .topLinks .wrapper-dropdown-top .topElement
 	border-bottom: 1px dashed #ed4d30
 	margin-left: 3px
-	
+
+#header
+	.wrapper-dropdown-top
+		span.header-menu-down
+			background: url('../../img/headerMenuDown.png') no-repeat
+			height: 10px
+			width: 10px
+			position: absolute
+			right: 0
+			top: 18px
+
+
 #header .topLinks .topElement
 	border-bottom: 1px solid #ed4d30
 	margin-left: 3px
@@ -30,19 +41,19 @@
 	
 
 #header .topLinks .topElementCompanyIcon
-	background: url('../img/headerCompanyMini.png') no-repeat
+	background: url('../../img/headerCompanyMini.png') no-repeat
 	
 #header .topLinks .topElementCityIcon 
-	background: url('../img/headerCityMini.png') no-repeat
+	background: url('../../img/headerCityMini.png') no-repeat
 	
 #header .topLinks .topElementCompanyService 
-	background: url('../img/headerServiceMini.png') no-repeat
+	background: url('../../img/headerServiceMini.png') no-repeat
 	
 #header .topLinks .topElementCompanyBlog 
-	background: url('../img/headerBlogMini.png') no-repeat
+	background: url('../../img/headerBlogMini.png') no-repeat
 	
 #header .topLinks .topElementCompanyFranch 
-	background: url('../img/headerFranMini.png') no-repeat
+	background: url('../../img/headerFranMini.png') no-repeat
 	
 #header .topLinks .city
 	float: left
@@ -61,7 +72,7 @@
 #header .topLogo
 	height: 100px
 	width: 570px
-	background: url('../img/headerTopLogo.png') no-repeat
+	background: url('../../img/headerTopLogo.png') no-repeat
 	position: absolute
 	z-index: 2
 
@@ -109,7 +120,8 @@
 		border: none
 		box-shadow: 0 3px #c26428
 		border-radius: 20px
-		padding: 5px 20px 5px 20px
+		padding: 3px 15px
+		font-size: 13px
 		font-family: 'PTSans-bold'
 		text-transform: uppercase
 		margin: 15px 0 5px 0
@@ -120,9 +132,10 @@
 		position: relative
 		color: #ffffff
 		padding-left: 25px
+		margin-left: 15px
 		span.service-book
 			position: absolute
-			background: url('../img/service-book.png') no-repeat
+			background: url('../../img/service-book.png') no-repeat
 			width: 20px
 			height: 20px
 			top: 0
@@ -208,19 +221,19 @@
 
 
 #header .mainMenu .topElementMenuRepair
-	background: url('../img/headerMenuTopRepair.png') no-repeat
+	background: url('../../img/headerMenuTopRepair.png') no-repeat
 
 #header .mainMenu .topElementMenuDiag
-	background: url('../img/headerMenuTopDiag.png') no-repeat
+	background: url('../../img/headerMenuTopDiag.png') no-repeat
 
 #header .mainMenu .topElementMenuTO
-	background: url('../img/headerMenuTopTO.png') no-repeat
+	background: url('../../img/headerMenuTopTO.png') no-repeat
 
 #header .mainMenu .topElementMenuInstall
-	background: url('../img/headerMenuTopInstall.png') no-repeat
+	background: url('../../img/headerMenuTopInstall.png') no-repeat
 
 #header .mainMenu .topElementMenuShin
-	background: url('../img/headerMenuTopShin.png') no-repeat
+	background: url('../../img/headerMenuTopShin.png') no-repeat
 
 #header .mainMenu .topElementMenuService
-	background: url('../img/headerMenuTopService.png') no-repeat
+	background: url('../../img/headerMenuTopService.png') no-repeat
