--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -4,16 +4,16 @@
 @import "lib/jquery.bxslider"
 @import "lib/main_gallery"
 @import "lib/blog"
-@import 'container'
-@import 'header'
-@import 'skin'
-@import 'footer'
-@import 'main_part'
-@import 'dropdown'
-@import 'noJS'
-@import 'font-awesome'
-@import 'service_page'
-@import 'sidebar'
+@import 'lib/container'
+@import 'lib/header'
+@import 'lib/skin'
+@import 'lib/footer'
+@import 'lib/main_part'
+@import 'lib/dropdown'
+@import 'lib/noJS'
+@import 'lib/font-awesome'
+@import 'lib/service_page'
+@import 'lib/sidebar'
 
 
 body
