--- a/source/stylesheets/lib/_dropdown.css.sass
+++ b/source/stylesheets/lib/_dropdown.css.sass
@@ -35,7 +35,6 @@
 .wrapper-dropdown-top
 	/* Size and position */
 	position: relative /* Enable absolute positionning for children and pseudo elements */
-	width: 140px
 
 
 	/* Styles */
@@ -43,20 +42,6 @@
 
 	cursor: pointer
 	outline: none
-	
-
-.wrapper-dropdown-top:after
-	content: ""
-	width: 0
-	height: 0
-	position: absolute
-	right: 16px
-
-	top: 50%
-	margin-top: -3px
-	border-width: 4px 4px 0 4px
-	border-style: solid
-	border-color: #ed4d30 transparent
 
 	
 
@@ -76,6 +61,7 @@
 		background-color: #ffffff
 	a:hover
 		background-color: #ffffff
+
 
 .wrapper-dropdown-top .dropdown
 	z-index: 10
@@ -112,7 +98,7 @@
 	transition: all 0.3s ease-out
 
 
-.wrapper-dropdown-top .dropdown li a
+#header .wrapper-dropdown-top .dropdown li a
 	display: block
 	text-decoration: underline
 	color: #ed4d30
@@ -132,19 +118,25 @@
 
 /* Hover state */
 
-.menu-element > .dropdown  a:hover
+#header .menu-element > .dropdown  a:hover, #header .wrapper-dropdown-top > .dropdown  a:hover
 	color: #231f20 !important
 	text-decoration: none
 
+.dropdown:before
+	content: ''
+	position: absolute
+	width: 100%
+	height: 20px
+	top: -20px
 
-ul.dropdown.submenu
+
+ul.dropdown.second-column
 	position: absolute
 	top: -1px
 	left: 100%
 	height: 101.5%
 	padding: 10px 8px 10px 0
 	margin-left: 0
-	display: none
 	border-left-width: 0
 	-webkit-border-left-widht: 0
 	-moz-border-left-widht: 0
