--- a/source/stylesheets/lib/_footer.css.sass
+++ b/source/stylesheets/lib/_footer.css.sass
@@ -35,7 +35,7 @@
 	right: 0
 	width: 800px
 	height: 78px
-	background: url('../img/footerTel.png') no-repeat
+	background: url('../../img/footerTel.png') no-repeat
 	
 
 #footer .footerData .siteMap 
@@ -52,7 +52,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerMiniMap.png')
+	background: url('../../img/footerMiniMap.png')
 	
 
 #footer .bottomContacts  .footerMagna 
@@ -61,7 +61,7 @@
 	border: none
 	position: relative
 	z-index: 5
-	background: url('../img/mangaweb.png') no-repeat
+	background: url('../../img/mangaweb.png') no-repeat
 	
 
 #footer .bottomContacts .magnaDiv 
@@ -99,7 +99,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerDot.png') no-repeat
+	background: url('../../img/footerDot.png') no-repeat
 	position: absolute
 	left: 0
 	width: 20px
@@ -124,7 +124,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerMiniYoutube.png') no-repeat
+	background: url('../../img/footerMiniYoutube.png') no-repeat
 
 .lImVk
 	left: 0
@@ -133,7 +133,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerMiniVK.png') no-repeat
+	background: url('../../img/footerMiniVK.png') no-repeat
 
 .lImTwit
 	left: 0
@@ -142,7 +142,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerMiniTwitter.png') no-repeat
+	background: url('../../img/footerMiniTwitter.png') no-repeat
 
 .lImFace
 	left: 0
@@ -151,7 +151,7 @@
 	padding-left: 20px
 	padding-bottom: 3px
 	border: none
-	background: url('../img/footerMiniFacebook.png') no-repeat
+	background: url('../../img/footerMiniFacebook.png') no-repeat
 
 
 #footer .footerMenuElement .footerMenuElementMiddle
