--- a/source/stylesheets/lib/_sidebar.css.sass
+++ b/source/stylesheets/lib/_sidebar.css.sass
@@ -41,7 +41,7 @@
 				padding-left: 0
 				padding-bottom: 3px
 				border: none
-				background: url('../img/sidebar_list_icons.png') 0 0 no-repeat
+				background: url('../../img/sidebar_list_icons.png') 0 0 no-repeat
 				position: absolute
 				left: 0
 				top: 10px
@@ -50,7 +50,7 @@
 		li.sub-li.open
 			>a, >a:hover
 				.lIm
-					background: url('../img/sidebar_list_icons.png') -33px 0 no-repeat
+					background: url('../../img/sidebar_list_icons.png') -33px 0 no-repeat
 			>ul.sublist
 				display: block
 		a
@@ -69,7 +69,7 @@
 				padding-left: 20px
 				padding-bottom: 3px
 				border: none
-				background: url('../img/headerMenuDot.png') no-repeat
+				background: url('../../img/headerMenuDot.png') no-repeat
 				position: absolute
 				left: 0
 				top: 8px
@@ -81,7 +81,7 @@
 			.lIm
 				padding-bottom: 3px
 				border: none
-				background: url('../img/headerMenuRight.png') no-repeat
+				background: url('../../img/headerMenuRight.png') no-repeat
 		ul.sublist
 			list-style-type: none
 			margin-left: 15px
@@ -102,19 +102,19 @@
 					padding-left: 20px
 					padding-bottom: 3px
 					border: none
-					background: url('../img/sidebar_list_icons.png') -6px 0 no-repeat
+					background: url('../../img/sidebar_list_icons.png') -6px 0 no-repeat
 					position: absolute
 					left: 0
 					top: 8px
 					width: 20px
 					height: 20px
 			a:hover
-				color: #f27d32 !important
+				color: #ed4d30 !important
 				text-decoration: none
 				.lIm
 					padding-bottom: 3px
 					border: none
-					background: url('../img/headerMenuRight.png') no-repeat
+					background: url('../../img/headerMenuRight.png') no-repeat
 .special-offer
 	padding-top: 25px
 	padding-right: 15px
