layot bugs fixed;

--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -7,13 +7,16 @@
 @import 'lib/button'
 @import 'lib/blog'
 @import 'lib/stations'
-@import 'container'
-@import 'header'
-@import 'skin'
-@import 'footer'
-@import 'main_part'
-@import 'dropdown'
-@import 'noJS'
+@import 'lib/container'
+@import 'lib/header'
+@import 'lib/skin'
+@import 'lib/footer'
+@import 'lib/main_part'
+@import 'lib/dropdown'
+@import 'lib/noJS'
+@import 'lib/sidebar'
+@import 'lib/service_page'
+
 
 
 body
